--- a/site/app/entrepreneur/[id]/styles/xxl.css
+++ b/site/app/entrepreneur/[id]/styles/xxl.css
@@ -316,131 +316,71 @@
     .dashboard-body section:nth-child(2){
         background-color: black;
     }
+
     
-    .globe-sale-cnt{
-        /* background-size: cover;
-        background-image: url(../../../../images/globe.webp); */
-        background-color: #fff;
-        height: fit-content;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        align-items: center;
-        padding: 0px;
-    }
     
-    .globe-sale-cnt div{
+    #about{
         display: flex;
         height: fit-content;
         width: 100%;
-        padding: 20px;
+        /* padding: 20px 20px; */
+
         display: flex;
         justify-content: space-between;
-        flex-direction: row-reverse;
+        flex-direction: column;
         align-items: center;
         cursor: pointer;
+        background-color: #fff;
         border-radius: 15px;
     }
 
-    .globe-sale-cnt div #summary-section{
-        width: 45%;
-        height: 600px;
+    #about h1{
+        color: #00926E;
+        font-size: 5.5vh;
+        font-weight: 700;
+        border: none;
+        margin: 0;
+    }
+
+    .about-card-cnt{
+        width: 100%;
+        height: 100%;
         padding: 20px;
         display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        background-color: #00926E;
+        justify-content: space-between;
+        flex-direction: row;
         border-bottom-right-radius:30px;
         border-top-right-radius:30px;
     }
 
-    .globe-sale-cnt div #summary-section h4{
-        font-size: x-large;
-        font-weight: 500;
-        color: #fff;
-        padding: 12px;
-        text-align: left;
+    .about-card-cnt{
+        display: flex;
+        margin: 25px;
+        color: #000;
     }
-    
-    .globe-sale-cnt div #summary-section p{
+
+    .about-card{
         padding: 10px;
-        text-align: justify;
+        width: 33.3%;
     }
-    
-    .globe-sale-cnt div #video-section{
-        width: 55%;
-        height: 600px;
-        border-radius: 0px;
-        padding: 0px;
-        background-color: #00926E;
-        border-bottom-left-radius:30px;
-        border-top-left-radius:30px;
-        
+
+    .content{
+        padding: 10px;
+        text-align: center;
     }
-    
-    .globe-list:nth-child(1){
-        /* background-image: url(../../../../images/15paris-autoshow-01-gjqw-superJumbo.webp); - Image removed */
-        background-color: #00926E;
-        background-size: cover;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
+
+    .title{
+        font-size: large;
+        font-weight: 800;
+        font-size: 4vh;
+        margin: 10px 5px;
     }
-    
-    
-    .globe-list:nth-child(2){
-        /* background-image: url(../../../../images/Advanced-Industry-4.0-Solutions-Are-Proliferating-Smart-Factories-800x445.jpg); - Image removed */
-        background-color: #005741;
-        background-size: cover;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    
-    .globe-list:nth-child(3){
-        /* background-image: url(../../../../images/tropikala-00520.jpg); - Image removed */
-        background-color: #003d2e;
-        background-size: cover;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    
-    .globe-list div{
-        background-color: transparent;
-        height: 100%;
-        border-radius: 10px;
-        margin: 0;
-        padding: 15px;
-    }
-    
-    .globe-list div:hover{
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
-    }
-    
-    .crypto-bg{
-        height: 120vh;
-        /* background-image: url(../../../../images/hybrid.jpg); - Image removed */
-        background-clip: content-box;
-        background-size: cover;
-        background-color: rgb(0, 0, 0);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
-    
-    .crypto-cnt{
-        height: 100%;
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0, .5);
-        padding: 50px;
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-        justify-content: space-between;
+
+    .summary{
+        font-size: large;
+        line-height: 30px;
+        font-weight: 500;
     }
     
     
@@ -514,82 +454,31 @@
         align-items: flex-start;
     }
     
-    
-    .globe-img{
-        /* background-image: url(../../../../images/1528731759314.jpeg); */
-        
-        background-color: #000;
+
+    .payment-bg{
+        height: 100vh;
+        /* background-image: url(../../../../images/hybrid.jpg); - Image removed */
+        background-clip: content-box;
+        background-size: cover;
+        color: #fff;
         display: flex;
-        border-radius: 10px;
         flex-direction: column;
-        /* padding: 10px; */
         justify-content: space-between;
-        /* grid-row: inherit; */
+        align-items: flex-start;
     }
     
-    .globe-img section:nth-child(1){
-        height: calc(40% - 5px);
-        width: calc(100% - 0px);
-        background-color: #000;
-        border-radius: 10px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        padding: 0;
-    
-    }
-    
-    .globe-img section:nth-child(1) div:nth-child(1) ul{
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
+    .payment-cnt{
         height: 100%;
-        width: 100%;
+        background-color: #fff;
+        /* background-color: rgb(0, 0, 0, .5); */
+        padding: 60px;
         display: flex;
         align-items: flex-start;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-    }
-    
-    .globe-img section:nth-child(1)  div:nth-child(1) ul li{
-        width: calc(50% - 5px);
-        height: calc(50% - 0px);
-        margin: 0;
-    }
-    
-    
-    .globe-img section:nth-child(1) div:nth-child(1){
-        height: 100%;
-        width: calc(50% - 10px);
-        background-color: #e9e9e9;
-        border-radius: 10px;
-        padding: 10px;
-    }
-    .globe-img section:nth-child(1) div:nth-child(2){
-        height: 100%;
-        width: calc(50% - 10px);
-        background-color: #e9e9e9;
-        border-radius: 10px;
-        padding: 10px;
-    
-    }
-    
-    .globe-img section:nth-child(2){
-        height: calc(60% - 10px);
-        width: calc(100% - 0px);
-        background-color: #fff;
-        border-radius: 10px;
-        padding: 0;
-    }
-    
-    .globe-img section:nth-child(2) div:nth-child(1){
-        height: 100%;
-        width: calc(100% - 0px);
-        background-color: #fff;
-        border-radius: 10px;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
-    .crypto-cnt ul{
+    .payment-cnt ul{
         overflow: hidden;
         flex-direction: row;
         padding: 0;
@@ -597,9 +486,10 @@
         height: 100%;
         width: 100%;
     }
-    .crypto-cnt ul li{
+    .payment-cnt ul li{
         width: calc(45%);
         padding: 25px 35px;
+        color: #00926e;
     }
 
     .conclude-list{
