--- a/site/app/entrepreneur/[id]/styles/s.css
+++ b/site/app/entrepreneur/[id]/styles/s.css
@@ -1,27 +1,56 @@
 @media screen and (max-width: 480px) {
     #headline{
-        font-size: 5vh;
-    }
-    #interval-text{
         font-size: 6vh;
     }
+    #interval-text{
+        font-size: 5vh;
+    }
+    #tagline-cnt {
+        z-index: 500;
+        position: absolute;
+        top: 200px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: #fff;
+        height: fit-content;
+        width: 100%;
+        /* padding: 10px; */
+        border-radius: 10px;
+        text-align: center;
+    }
+    #tagline{
+        z-index: 500;
+        position: absolute;
+        bottom: 10px;
+        /* left: 30px; */
+        color: #fff;
+        height: auto;
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+    }
     #section{
-        padding: 20px;
+        padding: 20px 25px;
     }
     #conclude-cnt{
+        padding: 50px;
+    }
+    #globe-section{
         padding: 20px;
     }
     #header-logoo-cnt{
-        margin-left: 8px;
+        margin-left: 20px;
     }
     #header-logoo-cnt h3{
-        padding-left: 5px;
+        padding-left: 20px;
         margin: 0;
-        font-size: medium;
     }
     #header-logoo-cnt img{
-        height: 35px;
-        width: 35px;
+        height: 50px;
+        width: 50px;
     }
     ul li div:hover{
         background-color: transparent;
@@ -35,7 +64,6 @@
         display: flex;
         position: relative;
         margin: 0;
-        overflow: hidden;
         /* flex-direction: column; */
         z-index: 1000;
         padding: 0;
@@ -47,7 +75,7 @@
     
     
     
-    header section ul{
+    .header section ul{
         list-style-type: none;
         display: flex;
         align-items: center;
@@ -55,23 +83,23 @@
         margin: 0;
         justify-content: center;
     }
-    header section ul li{
-        border: 1px solid #00926e;
-        padding: 6px 6px;
+    .header section ul li{
+        border: 1px solid #00926E;
+        padding: 12px 12px;
         border-radius: 25px;
         margin: 0px 5px;
         font-weight: 500;
-        color: #00926e;
+        color: #00926E;
     
     }
     
-    header section ul li:last-child{
-        background-color: #00926e;
+    .header section ul li:last-child{
+        background-color: #00926E;
         color: #fff;
     }
     
-    header section ul li:hover{
-        background-color: #00926e;
+    .header section ul li:hover{
+        background-color: #00926E;
         color: #fff;
     }
     
@@ -81,7 +109,6 @@
         /* background-color: ; */
         /* opacity: .5; */
         width: 100%;
-        overflow: hidden;
         display: flex;
         position: sticky;
         margin: 0;
@@ -155,8 +182,8 @@
         color: #fff;
         font-size: 7.5vh;
         text-align: justify;
-        padding: 10px 15px;
         font-weight: 500;
+        padding: 20px 25px;
     }
     
     
@@ -236,7 +263,7 @@
         display: flex;
         flex-direction: column;
         background-color: #00351ce8;
-        padding: 40px;
+        padding: 20px;
         justify-content: space-between;
     }
     
@@ -266,39 +293,38 @@
     
     .dashboard-summary{
         height: auto;
-        background-color: #005741;
+        background-color: transparent;
+        padding: 10px;
         width: 100%;
-        padding: 5px;
+        position: absolute;
+        bottom: 40px;
     }
     
     .dashboard-summary ul{
         list-style-type: none;
         display: flex;
-        padding: 10px 1px;
+        padding: 20px 20px;
         align-items: center;
-        flex-wrap: wrap;
         flex-direction: row;
-        margin: 0;
         justify-content: space-between;
     }
-
     
     .dashboard-summary ul li{
-          height: 450px;
-          background: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
-          backdrop-filter: blur(10px); /* Frosted glass effect */
-          border-radius: 15px; /* Rounded corners */
-          box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
-          border: 1px solid rgba(255, 255, 255, 0.3); /* Light border for definition */
-          display: flex;
-          justify-content: center;
-          align-items: flex-start;
-          color: white;
-          font-size: 1.5rem;
-          font-family: Arial, sans-serif;
-          text-align: center;
-          margin-bottom: 10px;
-        width: calc(49% - 0px);
+        width: fit-content;
+        height: fit-content;
+        background: #00926E; /* Semi-transparent white */
+        backdrop-filter: blur(10px); /* Frosted glass effect */
+        border-radius: 15px; /* Rounded corners */
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+        border: 1px solid rgba(255, 255, 255, 0.3); /* Light border for definition */
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        color: white;
+        font-size: 1.5rem;
+        font-family: Arial, sans-serif;
+        text-align: center;
+        /* width: calc(25% - 15px); */
     
     
     }
@@ -308,6 +334,7 @@
         width: 100%;
         padding-top: 40px;
         z-index: 2000;
+        background-color: #fff;
         position: relative;
         border-top-left-radius:10px;
         border-top-right-radius:10px;
@@ -316,146 +343,104 @@
     .dashboard-body section:nth-child(2){
         background-color: black;
     }
+
     
-    .globe-sale-cnt{
-        background-size: cover;
-        /* background-image: url(../../../../images/globe.webp); - Image removed */ background-color: rgb(0, 0, 0, 0.7);
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
-        
+    
+    #about{
         display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        flex-direction: column;
-        padding: 10px;
-    }
-    
-    .tutorial-cnt{
-        background-size: cover;
-        /* background-image: url(../../../../images/Case_Study_Unverschwendet___Quivo.webp); - Image removed */ background-color: rgb(0, 0, 0, 0.7);
-        
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    
-    .tutorial-cnt div{
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
-        padding: 70px;
-        
-    }
-    
-    .globe-sale-cnt div{
-        display: flex;
-        height: auto;
+        height: fit-content;
         width: 100%;
-        padding: 20px;
+        /* padding: 20px 20px; */
+
+        display: flex;
+        justify-content: space-between;
         flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-start;
-        background-color: transparent;
+        align-items: center;
         cursor: pointer;
+        background-color: #fff;
         border-radius: 15px;
     }
-    
-    .globe-sale-cnt div:hover{
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
-    }
-    
-    .globe-list:nth-child(1){
-        /* background-image: url(../../../../images/15paris-autoshow-01-gjqw-superJumbo.webp); - Image removed */ background-color: #00926E;
-        background-size: cover;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    
-    
-    .globe-list:nth-child(2){
-        /* background-image: url(../../../../images/Advanced-Industry-4.0-Solutions-Are-Proliferating-Smart-Factories-800x445.jpg); - Image removed */ background-color: #005741;
-        background-size: cover;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    
-    .globe-list:nth-child(3){
-        /* background-image: url(../../../../images/tropikala-00520.jpg); - Image removed */ background-color: #003d2e;
-        background-size: cover;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    
-    .globe-list div{
-        background-color: transparent;
-        height: 100%;
-        border-radius: 10px;
+
+    #about h1{
+        color: #00926E;
+        font-size: 6vh;
+        text-align: center;
+        font-weight: 500;
+        border: none;
         margin: 0;
-        padding: 15px;
     }
-    
-    .globe-list div:hover{
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
-    }
-    
-    .crypto-bg{
-        /* background-image: url(../../../../images/traxer-kM6QNrgo0YE-unsplash (1).jpg); - Image removed */ background-color: rgb(0, 0, 0);
-        background-clip: content-box;
-        background-size: cover;
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
+
+    .about-card-cnt{
+        width: 100%;
+        height: fit-content;
+        /* padding: 20px; */
         display: flex;
-        flex-direction: column;
+        align-items: center;
         justify-content: space-between;
-        align-items: flex-start;
+        flex-direction: column;
+        border-bottom-right-radius:30px;
+        border-top-right-radius:30px;
     }
-    
-    .crypto-bg .crypto-cnt{
-        height: 100%;
+
+    .about-card-cnt{
+        display: flex;
+        margin: 25px;
+        color: #000;
+    }
+
+    .about-card{
         padding: 10px;
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
-    
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-        justify-content: space-between;
+        width: 100%;
+    }
+
+    .content{
+        padding: 10px;
+        text-align: center;
+    }
+
+    .title{
+        font-size: large;
+        font-weight: 800;
+        font-size: 4vh;
+        margin: 10px 5px;
+    }
+
+    .summary{
+        font-size: large;
+        line-height: 30px;
+        font-weight: 500;
     }
     
     
     .dashboard-body  ul{
         list-style-type: none;
         display: flex;
-        padding: 5px 5px;
         align-items: center;
-        width: 100%;
-        background-color: #000;
-        overflow: auto;
+        flex-direction: row;
         justify-content: space-between;
+        width: 100%;
+        height: fit-content;
+        overflow: auto;
+        padding: 10px 10px;
+        background-color: #fff;
     }
     
     .dashboard-body ul li{
         width: 350px;
         height: 400px;
         flex-shrink: 0;
+
         background: rgba(255, 255, 255, 0.1); /* Semi-transparent white */
-        backdrop-filter: blur(10px); /* Frosted glass effect */
         border-radius: 15px; /* Rounded corners */
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
         border: 1px solid rgba(255, 255, 255, 0.3); /* Light border for definition */
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 0px 10px;
         color: white;
         font-size: 1.5rem;
         font-family: Arial, sans-serif;
         text-align: center;
-    
     }
     
     .dashboard-body ul li:hover{
@@ -465,20 +450,21 @@
     .dashboard-conclusion{
         height: auto;
         width: 100%;
-        padding-top: 40px;
+        padding: 20px;
         z-index: 2000;
         position: relative;
+        /* background-color: #005741; */
+        background-color: #00926E;
         border-top-left-radius:30px;
         border-top-right-radius:30px;
     }
     
     .conclude-lg-img{
-        /* background-image: url(../../../../images/1528731759314.jpeg); - Image removed */ background-color: rgb(0, 0, 0, 0.7);
+        /* background-image: url(../../../../images/1528731759314.jpeg); - Image removed */
         border-radius: 10px;
         background-clip: content-box;
         background-size: cover;
-        background-color: rgb(0, 0, 0);
-        background-color: rgb(0, 0, 0,.5);
+        background-color: rgb(0, 0, 0, 0.7);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -498,110 +484,49 @@
     }
     
 
-    
-    .globe-img{
-        /* /* background-image: url(../../../../images/1528731759314.jpeg); - Image removed */ background-color: rgb(0, 0, 0, 0.7); 
-        
-        background-color: #000;
+    .payment-bg{
+        height: 100vh;
+        /* background-image: url(../../../../images/hybrid.jpg); - Image removed */
+        background-clip: content-box;
+        background-size: cover;
+        color: #fff;
         display: flex;
-        border-radius: 10px;
         flex-direction: column;
-        /* padding: 10px; */
         justify-content: space-between;
-        /* grid-row: inherit; */
+        align-items: flex-start;
     }
     
-    .globe-img section:nth-child(1){
-        height: calc(40% - 5px);
-        width: calc(100% - 0px);
-        background-color: #000;
-        border-radius: 10px;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-        padding: 0;
-    
-    }
-    
-    .globe-img section:nth-child(1) div:nth-child(1) ul{
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
+    .payment-cnt{
         height: 100%;
-        width: 100%;
+        background-color: #fff;
+        /* background-color: rgb(0, 0, 0, .5); */
+        padding: 20px;
         display: flex;
         align-items: flex-start;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-    }
-    
-    .globe-img section:nth-child(1)  div:nth-child(1) ul li{
-        width: calc(50% - 5px);
-        height: calc(50% - 0px);
-        margin: 0;
-    }
-    
-    
-    .globe-img section:nth-child(1) div:nth-child(1){
-        height: 100%;
-        width: calc(50% - 10px);
-        background-color: #e9e9e9;
-        border-radius: 10px;
-        padding: 10px;
-    }
-    .globe-img section:nth-child(1) div:nth-child(2){
-        height: 100%;
-        width: calc(50% - 10px);
-        background-color: #e9e9e9;
-        border-radius: 10px;
-        padding: 10px;
-    
-    }
-    
-    .globe-img section:nth-child(2){
-        height: calc(60% - 10px);
-        width: calc(100% - 0px);
-        background-color: #fff;
-        border-radius: 10px;
-        padding: 0;
-    }
-    
-    .globe-img section:nth-child(2) div:nth-child(1){
-        height: 100%;
-        width: calc(100% - 0px);
-        background-color: #fff;
-        border-radius: 10px;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
-    .globe-list-cnt{
-        overflow: hidden;
-        flex-direction: row;
-        padding: 0;
-    }
-    .globe-list-cnt .globe-list{
-        margin: 0px 10px;
-        width: 80%;
-    }
-
-    .crypto-list-cnt{
-        overflow: hidden;
+    .payment-cnt ul{
+        /* overflow: auto; */
         flex-direction: column;
         padding: 0;
+        margin: 0;
+        height: fit-content;
+        width: 100%;
     }
-    #crypto-list{
-        width: calc(100% - 0px);
-        padding: 5px 5px;
-        height: auto;
-        margin: 10px 0px;
-
-
+    .payment-cnt ul li{
+        width: 100%;
+        padding: 25px 25px;
+        color: #00926e;
+        height: fit-content;
     }
 
     .conclude-list{
-        font-size: 4vh; 
+        font-size: 3.5vh; 
     }
 
-
+    
 
     footer{
         height: auto;
@@ -609,7 +534,7 @@
         display: flex;
         padding: 0;
         /* background-color: #005c45; */
-        background-color: #000;
+        background-color: #003c2d;
         color: #fff;
         /* background-color: #00351ce8; */
         flex-direction: column;
@@ -669,7 +594,6 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
         padding: 20px;
         color: #fff;
 
@@ -677,14 +601,12 @@
 
     footer section:nth-child(2) div{
         height: auto;
-        width: 45%;
+        width: auto;
         display: flex;
         justify-content: flex-start;
         flex-direction: column;
-        /* align-items: flex-end; */
         color: #fff;
         flex-wrap: wrap;
-        margin: 10px 0px;
     }
 
     footer section:nth-child(2) div ul{
@@ -707,16 +629,24 @@
         height: auto;
         width: 100%;
         display: flex;
-        padding: 0px 5px;
+        padding: 0px 50px;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
     }
    
-    
     footer .copywright div:nth-child(1){
         height: auto;
-        width: 70%;
+        width: 60%;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    footer .copywright div:nth-child(1){
+        height: auto;
+        width: 40%;
         display: flex;
         justify-content: flex-start;
         flex-direction: row;
@@ -739,7 +669,7 @@
         padding: 0;
         color: #fff;
         /* margin: 0px 8px; */
-        font-size: small;
+        font-size: medium;
         align-items: flex-start;
     }
 
@@ -769,7 +699,7 @@
         padding: 0;
         color: #fff;
         margin: 0px 10px;
-        font-size: small;
+        font-size: medium;
         align-items: center;
     }
 }
