--- a/site/app/entrepreneur/[id]/styles/s.css
+++ b/site/app/entrepreneur/[id]/styles/s.css
@@ -57,7 +57,7 @@
     }
     
     header{
-        height: 100vh;
+        height: calc(100vh - 40px);
         background-color: transparent;
         /* background-color: ; */
         /* opacity: .5; */
